@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.jboss.narayana.jts</groupId>
         <artifactId>idlj-idl-parent</artifactId>
-        <version>5.5.2.Final-SNAPSHOT</version>
+        <version>5.9.1.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -128,15 +128,9 @@
             <activation>
                 <jdk>[1.9,)</jdk>
             </activation>
-
-<!--            <dependencies>
-                <dependency>
-                    <groupId>org.jboss.narayana.jts</groupId>
-                    <artifactId>${java.corba.patch.name}</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-            </dependencies>-->
-
+            <properties>
+                <jvm.args.jdk9>--add-modules java.corba</jvm.args.jdk9>
+            </properties>
             <build>
                 <plugins>
 
@@ -196,8 +190,6 @@
                                     <compilerArgs>
                                         <arg>--add-modules</arg>
                                         <arg>java.corba</arg>
-                                        <arg>--patch-module</arg>
-                                        <arg>java.corba=${java.corba.patch.jar}</arg>
                                         <arg>--add-exports</arg>
                                         <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
                                     </compilerArgs>
@@ -216,8 +208,6 @@
                                     <compilerArgs>
                                         <arg>--add-modules</arg>
                                         <arg>java.corba</arg>
-                                        <arg>--patch-module</arg>
-                                        <arg>java.corba=${java.corba.patch.jar}</arg>
                                     </compilerArgs>
                                 </configuration>
                             </execution>
