@@ -28,6 +28,9 @@
     <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
     <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
     <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
+    <idlj.jdk9.args/>
+    <jacorb.jdk9.args/>
+    <surefireArgLine/>
   </properties>
 
   <build>
@@ -60,6 +63,22 @@
               <testExcludes>
                 <exclude>**</exclude>
               </testExcludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration combine.self="override">
+              <skip>true</skip>
             </configuration>
           </execution>
         </executions>
@@ -132,32 +151,31 @@
           <jdk>[1.9,)</jdk>
         </activation>
 
+      <properties>
+        <version.org.jacorb.jacorb>3.7</version.org.jacorb.jacorb>
+        <version.compiler.plugin>3.6.0</version.compiler.plugin>
+      </properties>
+
       <dependencies>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
           <artifactId>${java.corba.patch.name}</artifactId>
           <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
-          <version>${project.version}</version>
+          <scope>provided</scope>
         </dependency>
         <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
+          <groupId>org.jacorb</groupId>
+          <artifactId>jacorb-omgapi</artifactId>
+          <version>${version.org.jacorb.jacorb}</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
-      
+
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.10</version>
             <executions>
               <execution>
                 <id>copy-dependencies</id>
@@ -173,120 +191,69 @@
                       <version>${project.version}</version>
                       <type>${project.packaging}</type>
                     </artifactItem>
+                    <artifactItem>
+                      <groupId>org.jacorb</groupId>
+                      <artifactId>jacorb-omgapi</artifactId>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9-jacorb</outputDirectory>
+                    </artifactItem>
                   </artifactItems>
                 </configuration>
               </execution>
             </executions>
           </plugin>
-
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jts-jacorb-jdk9</id>
+      <activation>
+        <property>
+          <name>!jacorb-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <jacorb.jdk9.args>
+          --add-modules java.corba
+          --patch-module java.corba=${project.build.directory}/java9-jacorb/jacorb-omgapi-${version.org.jacorb.jacorb}.jar
+          --add-exports=java.corba/org.omg.CORBA_2_5=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CONV_FRAME=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CSIIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.ETF=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.GIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.PortableGroup=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.SSLIOP=ALL-UNNAMED
+        </jacorb.jdk9.args>
+      </properties>
+      <build>
+        <plugins>
           <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <executions>
               <execution>
-                <id>default-compile</id>
+                <id>jacorb-compile</id>
                 <goals>
                   <goal>compile</goal>
                 </goals>
-                <configuration combine.self="override">
+                <configuration>
                   <compilerArgs>
                     <arg>--add-modules</arg>
                     <arg>java.corba</arg>
-                    <arg>--patch-module</arg>
-                    <arg>java.corba=${java.corba.patch.jar}</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
-
-                    <!--
-                       we have to export everything instead of just what we need
-                       (https://bugs.openjdk.java.net/browse/JDK-8162401)
-                    <arg>java.corba/com.sun.corba.se.impl.orbutil=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.impl.interceptors=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED</arg>
-                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
-                    <arg>java.corba/org.omg.CosTransactions=ALL-UNNAMED</arg>
-                     -->
                   </compilerArgs>
-                  <excludes>
-                    <exclude>**/jacorb/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </excludes>
                 </configuration>
               </execution>
               <execution>
-                <id>default-testCompile</id>
+                <id>jacorb-testCompile</id>
                 <goals>
                   <goal>testCompile</goal>
                 </goals>
-                <configuration combine.self="override">
+                <configuration>
                   <compilerArgs>
                     <arg>--add-modules</arg>
                     <arg>java.corba</arg>
-                    <arg>--patch-module</arg>
-                    <arg>java.corba=${java.corba.patch.jar}</arg>
-                    <!--
-                       we have to export everything instead of just what we need
-                       (https://bugs.openjdk.java.net/browse/JDK-8162401)
-                    <arg>java.corba/com.sun.corba.se.impl.orbutil=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED</arg>
-                    <arg>java.corba/com.sun.corba.se.impl.interceptors=ALL-UNNAMED</arg>
-                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
-                    <arg>java.corba/org.omg.CosTransactions=ALL-UNNAMED</arg>
-                      -->
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
                   </compilerArgs>
-                  <testExcludes>
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </testExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default-test</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration combine.self="override">
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  <systemProperties combine.children="append" />
-                  <argLine>--add-modules java.corba</argLine>
-                  <excludes>
-                    <!-- exclude tests which we don't want to run -->
-                    <exclude>**/common/**</exclude>
-                    <exclude>**/initialisation/postinit/**</exclude>
-                    <exclude>**/initialisation/postset/**</exclude>
-                    <exclude>**/initialisation/preinit/**</exclude>
-                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
-                    <exclude>**/SimpleObjectImpl.java</exclude>
-                    <exclude>**/TestAttributeCallback.java</exclude>
-                    <!-- these ones need fixing -->
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </excludes>
-                  <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-                  <systemPropertyVariables
-                    combine.children="append">
-                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                  </systemPropertyVariables>
                 </configuration>
               </execution>
             </executions>
@@ -337,6 +304,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/javaidl/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -365,6 +333,8 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${jacorb.jdk9.args}</argLine>
+                  <reportsDirectory>${project.build.directory}/jacorb-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append"/>
                   <excludes>
                     <exclude>**/initialisation/postinit/**</exclude>
@@ -390,7 +360,69 @@
         </plugins>
       </build>
     </profile>
-
+    <profile>
+      <id>jts-idlj-jdk9</id>
+      <activation>
+        <property>
+          <name>!idlj-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl-jdk9</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl-jdk9</artifactId>
+          <version>${project.version}</version>
+          <classifier>tests</classifier>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <properties>
+        <idlj.jdk9.args>--add-modules java.corba</idlj.jdk9.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                    <arg>--patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>jts-idlj</id>
       <activation>
@@ -426,6 +458,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -454,6 +487,8 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args}</argLine>
+                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/common/**</exclude>
@@ -466,7 +501,6 @@
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
@@ -479,6 +513,56 @@
                     <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
                     <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
                   </systemPropertyVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jts-openjdk-jdk9</id>
+      <activation>
+        <property>
+          <name>!openjdk-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <idlj.jdk9.args>--add-modules java.corba</idlj.jdk9.args>
+        <idlj.boot.args>--patch-module java.corba=${openjdk-orb.jar}</idlj.boot.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                    <arg>--patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
                 </configuration>
               </execution>
             </executions>
@@ -522,6 +606,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -544,13 +629,13 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <executions>
               <execution>
-                <id>surefire-idlj</id>
+                <id>surefire-idlj-openjdk</id>
                 <phase>test</phase>
                 <goals>
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${idlj.boot.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args} ${idlj.boot.args}</argLine>
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/common/**</exclude>
@@ -563,7 +648,7 @@
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <reportsDirectory>${project.build.directory}/idlj-openjdk-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
@@ -620,6 +705,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/javaidl/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
