@@ -39,21 +39,24 @@ ROOT="/"
 M2_HOME=""
 MAVEN_HOME=""
 
+JAVA_VERSION=$(java -version 2>&1 | grep "\(java\|openjdk\) version" | cut -d\  -f3 | tr -d '"' | tr -d '[:space:]')
+
+if [ $JAVA_VERSION = "9.0.4" ]; then
+  MAVEN_OPTS="$MAVEN_OPTS --add-modules java.corba"
+  MAVEN_OPTS="$MAVEN_OPTS --add-modules java.xml.bind"
+  MAVEN_OPTS="$MAVEN_OPTS --add-modules java.xml.ws"
+  export MAVEN_OPTS
+fi
+
 if [ -z "$MAVEN_OPTS" ]
 then
-	if [ $JAVA_VERSION = "9-ea" ]; then
+	if [ $JAVA_VERSION = "9.0.4" ]; then
 		MAVEN_OPTS="$MAVEN_OPTS -Xms1303m -Xmx1303m"
-		MAVEN_OPTS="$MAVEN_OPTS --add-modules java.corba"
-		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.util=ALL-UNNAMED"
-		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.lang.reflect=ALL-UNNAMED"
-		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.text=ALL-UNNAMED"
-		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.desktop/java.awt.font=ALL-UNNAMED"
 	else
     MAVEN_OPTS="$MAVEN_OPTS -Xms1303m -Xmx1303m -XX:MaxPermSize=512m"
 	fi
 	export MAVEN_OPTS
 fi
-
 
 #  Default search path for maven.
 MAVEN_SEARCH_PATH="\
@@ -63,7 +66,7 @@ MAVEN_SEARCH_PATH="\
     maven"
 
 #  Default arguments
-MVN_OPTIONS="-s tools/maven/conf/settings.xml $BPA"
+MVN_OPTIONS="-B -s tools/maven/conf/settings.xml $BPA"
 
 #  Use the maximum available, or set MAX_FD != -1 to use that
 MAX_FD="maximum"
