@@ -238,7 +238,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
           <configuration>
             <argLine>${surefireArgLine}</argLine>
             <forkMode>pertest</forkMode>
@@ -407,7 +406,6 @@
   </dependencies>
 
   <properties>
-    <version.compiler.plugin>3.5.1</version.compiler.plugin>
     <!-- IP stack configs. -->
     <testLogToFile>true</testLogToFile>
     <jvm.args.ip>-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false</jvm.args.ip>
@@ -429,7 +427,7 @@
 
     <!-- External dependencies versions -->
     <version.jnpserver>5.0.3.GA</version.jnpserver>
-    <version.org.codehaus.mojo.findbugs-maven-plugin>3.0.1</version.org.codehaus.mojo.findbugs-maven-plugin>
+    <version.com.github.spotbugs.spotbugs-maven-plugin>3.1.0-RC7</version.com.github.spotbugs.spotbugs-maven-plugin>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.1.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
     <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
@@ -452,7 +450,7 @@
     <version.org.jacorb.jacorb>2.3.2-jbossorg-5</version.org.jacorb.jacorb>
     <version.org.jacorb.jacorb-idl-compiler>2.3.1</version.org.jacorb.jacorb-idl-compiler>
     <version.jacorb>2.3.1jboss.patch01-brew</version.jacorb>
-    <version.org.jboss.openjdk-orb>8.0.6.Final</version.org.jboss.openjdk-orb>
+    <version.org.jboss.openjdk-orb>8.0.8.Final</version.org.jboss.openjdk-orb>
     <version.javax.annotation>1.2</version.javax.annotation>
     <version.javax.enterprise>1.1</version.javax.enterprise>
     <version.javax.inject>1</version.javax.inject>
@@ -480,7 +478,7 @@
     <version.com.sun.grizzly>1.9.59</version.com.sun.grizzly>
     <version.org.codehaus.jettison>1.3.4</version.org.codehaus.jettison>
     <version.junit>4.11</version.junit>
-    <version.org.jboss.byteman>4.0.0-BETA3</version.org.jboss.byteman>
+    <version.org.jboss.byteman>4.0.4</version.org.jboss.byteman>
     <version.org.wildfly.arquillian>2.0.0.Final</version.org.wildfly.arquillian>
     <version.org.jboss.arquillian.core>1.1.11.Final</version.org.jboss.arquillian.core>
     <version.org.jboss.arquillian.container.weld>1.0.0.CR9</version.org.jboss.arquillian.container.weld>
@@ -497,16 +495,12 @@
     <!-- Maven plugin versions -->
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
     <version.org.jboss.as.plugins.jboss-as-maven-plugin>7.4.Final</version.org.jboss.as.plugins.jboss-as-maven-plugin>
-    <version.org.apache.maven.plugins.maven-antrun-plugin>1.7</version.org.apache.maven.plugins.maven-antrun-plugin>
-    <version.org.jacoco>0.7.4.201502262128</version.org.jacoco>
-<!--
-    <version.org.jacoco>0.7.2.201409121644</version.org.jacoco>
-    <version.org.jacoco>0.7.3-SNAPSHOT</version.org.jacoco>
-    <version.org.jacoco>0.7.2.201409121644</version.org.jacoco>
-    <version.org.jacoco>0.6.3.201306030806</version.org.jacoco>
--->
+    <version.org.jacoco>0.7.8</version.org.jacoco>
     <version.org.sonatype.plugins.nexus-staging-maven-plugin>1.6.6</version.org.sonatype.plugins.nexus-staging-maven-plugin>
     <version.org.codehaus.plexus.plexus-archiver>3.0.3</version.org.codehaus.plexus.plexus-archiver>
+    <!-- SUREFIRE-1424 we need to downgrade to 2.20 -->
+    <version.surefire.plugin>2.20</version.surefire.plugin>
+    <version.doxia>1.7.5</version.doxia>
   </properties>
   <modules>
     <module>tools</module>
@@ -526,7 +520,6 @@
     <module>vertx</module>
   </modules>
   <profiles>
-<!-- j9 TODO figure out why the check fails on ArjunaCore arjuna
     <profile>
       <id>byteman-rulecheck</id>
       <activation>
@@ -541,7 +534,7 @@
             <executions>
               <execution>
                  <id>rulecheck</id>
-                 <phase>test</phase>
+                 <phase>test-compile</phase>
                  <goals>
                    <goal>rulecheck</goal>
                  </goals>
@@ -556,7 +549,6 @@
         </plugins>
       </build>
     </profile>
--->
       <profile>
         <id>j9</id>
         <activation>
@@ -572,7 +564,7 @@
                 <childDelegation>true</childDelegation>
                 <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
                 <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                <argLine>${jvm.args.jdk9}</argLine>
+                <argLine>-Djdk.attach.allowAttachSelf=true ${jvm.args.jdk9}</argLine>
               </configuration>
             </plugin>
             <plugin>
@@ -599,6 +591,8 @@
         <properties>
           <maven.compiler.source>1.9</maven.compiler.source>
           <maven.compiler.target>1.9</maven.compiler.target>
+          <version.org.jacorb.jacorb>3.7</version.org.jacorb.jacorb>
+          <version.org.jacorb.jacorb-idl-compiler>3.7</version.org.jacorb.jacorb-idl-compiler>
           <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}</server.jvm.args>
         </properties>
       </profile>
@@ -732,8 +726,7 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
-                  <skip>true</skip>
-                  <argLine>${surefireArgLine} -Xss2048k</argLine>
+                  <argLine>${surefireArgLine} ${jvm.args.jdk9} -Djdk.attach.allowAttachSelf=true -Xss2048k</argLine>
                   <systemProperties>
                       <property>
                           <name>com.arjuna.ats.arjuna.common.propertiesFile</name>
@@ -789,12 +782,12 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>findbugs-maven-plugin</artifactId>
-                        <version>${version.org.codehaus.mojo.findbugs-maven-plugin}</version>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs-maven-plugin</artifactId>
+                        <version>${version.com.github.spotbugs.spotbugs-maven-plugin}</version>
                         <executions>
                             <execution>
-                                <id>findbugs</id>
+                                <id>spotbugs</id>
                                 <phase>compile</phase>
                                 <goals>
                                     <goal>check</goal>
@@ -808,12 +801,39 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.doxia</groupId>
+                                <artifactId>doxia-decoration-model</artifactId>
+                                <version>${version.doxia}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.maven.doxia</groupId>
+                                <artifactId>doxia-skin-model</artifactId>
+                                <version>${version.doxia}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.maven.doxia</groupId>
+                                <artifactId>doxia-integration-tools</artifactId>
+                                <version>${version.doxia}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.maven.doxia</groupId>
+                                <artifactId>doxia-site-renderer</artifactId>
+                                <version>${version.doxia}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.maven.doxia</groupId>
+                                <artifactId>doxia-doc-renderer</artifactId>
+                                <version>${version.doxia}</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
                             <reportPlugins>
                                 <plugin>
-                                    <groupId>org.codehaus.mojo</groupId>
-                                    <artifactId>findbugs-maven-plugin</artifactId>
-                                    <version>${version.org.codehaus.mojo.findbugs-maven-plugin}</version>
+                                    <groupId>com.github.spotbugs</groupId>
+                                    <artifactId>spotbugs-maven-plugin</artifactId>
+                                    <version>${version.com.github.spotbugs.spotbugs-maven-plugin}</version>
                                 </plugin>
                             </reportPlugins>
                         </configuration>
